--- a/app/src/main/res/layout/fragment_dynamic_memory_info.xml
+++ b/app/src/main/res/layout/fragment_dynamic_memory_info.xml
@@ -13,18 +13,24 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="6dp"
-        android:layout_weight="0.4" />
+        android:layout_weight="0.4"/>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="#000000" />
 
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rcv_dynamic_mem"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="6dp"
-        android:layout_weight="0.6" />
+        android:layout_weight="0.6"
+        android:descendantFocusability="afterDescendants"
+        android:nextFocusDown="@id/rcv_dynamic_mem"
+        android:scrollbarSize="10dp"
+        android:scrollbars="vertical"
+        android:layout_marginBottom="6dp"/>
 
 </LinearLayout>
