--- a/app/src/main/res/layout/item_install_app_layout.xml
+++ b/app/src/main/res/layout/item_install_app_layout.xml
@@ -6,7 +6,7 @@
     android:layout_marginTop="3dp"
     android:background="@drawable/list_item_selector"
     android:focusable="true"
-    android:focusableInTouchMode="true">
+    android:focusableInTouchMode="false">
 
     <RelativeLayout
         android:id="@+id/rl_title_area"
